Bison/Sample2/expression_parser.output
Terminals unused in grammar

   TK_EOF
   TK_ERROR


State 58 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: opt_eols statement_list opt_eols

    2 statement_list: statement_list eols stmt
    3               | stmt

    4 stmt: print
    5     | assign
    6     | if_stmt

    7 opt_eols: eols
    8         | %empty

    9 eols: eols TK_EOL
   10     | TK_EOL

   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt

   12 conditional_expr: expr compare_options expr

   13 optional_else_stmt: TK_RW_ELSE eols block_statement
   14                   | %empty

   15 block_statement: stmt
   16                | TK_L_BRACE opt_eols statement_list opt_eols TK_R_BRACE

   17 compare_options: TK_COMP_EQUAL
   18                | TK_COMP_NEQUAL
   19                | TK_COMP_GREATER
   20                | TK_COMP_GREATER_EQUAL
   21                | TK_COMP_LESS
   22                | TK_COMP_LESS_EQUAL

   23 print: TK_RW_PRINT expr
   24      | TK_RW_PRINT expr TK_COMMA print_option

   25 print_option: TK_BIN
   26             | TK_HEX
   27             | TK_DEC

   28 assign: TK_VARIABLE TK_EQUAL expr

   29 expr: expr OP_ADD term
   30     | expr OP_SUB term
   31     | term

   32 term: term OP_MULT factor
   33     | term OP_DIV factor
   34     | factor

   35 factor: TK_NUMBER
   36       | TK_VARIABLE
   37       | TK_L_PAR expr TK_R_PAR


Terminals, with rules where they appear

$end (0) 0
error (256)
OP_ADD (258) 29
OP_SUB (259) 30
OP_MULT (260) 32
OP_DIV (261) 33
TK_L_PAR (262) 11 37
TK_R_PAR (263) 11 37
TK_NUMBER (264) 35
TK_HEX (265) 26
TK_BIN (266) 25
TK_DEC (267) 27
TK_EOL (268) 9 10
TK_EOF (269)
TK_ERROR (270)
TK_EQUAL (271) 28
TK_RW_PRINT (272) 23 24
TK_COMMA (273) 24
TK_RW_IF (274) 11
TK_RW_ELSE (275) 13
TK_R_BRACE (276) 16
TK_L_BRACE (277) 16
TK_COMP_GREATER (278) 19
TK_COMP_GREATER_EQUAL (279) 20
TK_COMP_LESS (280) 21
TK_COMP_NEQUAL (281) 18
TK_COMP_LESS_EQUAL (282) 22
TK_COMP_EQUAL (283) 17
TK_VARIABLE (284) 28 36


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
input (31)
    on left: 1, on right: 0
statement_list (32)
    on left: 2 3, on right: 1 2 16
stmt (33)
    on left: 4 5 6, on right: 2 3 15
opt_eols (34)
    on left: 7 8, on right: 1 16
eols (35)
    on left: 9 10, on right: 2 7 9 11 13
if_stmt (36)
    on left: 11, on right: 6
conditional_expr (37)
    on left: 12, on right: 11
optional_else_stmt (38)
    on left: 13 14, on right: 11
block_statement (39)
    on left: 15 16, on right: 11 13
compare_options (40)
    on left: 17 18 19 20 21 22, on right: 12
print (41)
    on left: 23 24, on right: 4
print_option (42)
    on left: 25 26 27, on right: 24
assign (43)
    on left: 28, on right: 5
expr (44)
    on left: 29 30 31, on right: 12 23 24 28 29 30 37
term (45)
    on left: 32 33 34, on right: 29 30 31 32 33
factor (46)
    on left: 35 36 37, on right: 32 33 34


State 0

    0 $accept: . input $end
    1 input: . opt_eols statement_list opt_eols
    7 opt_eols: . eols
    8         | . %empty  [TK_RW_PRINT, TK_RW_IF, TK_VARIABLE]
    9 eols: . eols TK_EOL
   10     | . TK_EOL

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 8 (opt_eols)

    input     go to state 2
    opt_eols  go to state 3
    eols      go to state 4


State 1

   10 eols: TK_EOL .

    $default  reduce using rule 10 (eols)


State 2

    0 $accept: input . $end

    $end  shift, and go to state 5


State 3

    1 input: opt_eols . statement_list opt_eols
    2 statement_list: . statement_list eols stmt
    3               | . stmt
    4 stmt: . print
    5     | . assign
    6     | . if_stmt
   11 if_stmt: . TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   23 print: . TK_RW_PRINT expr
   24      | . TK_RW_PRINT expr TK_COMMA print_option
   28 assign: . TK_VARIABLE TK_EQUAL expr

    TK_RW_PRINT  shift, and go to state 6
    TK_RW_IF     shift, and go to state 7
    TK_VARIABLE  shift, and go to state 8

    statement_list  go to state 9
    stmt            go to state 10
    if_stmt         go to state 11
    print           go to state 12
    assign          go to state 13


State 4

    7 opt_eols: eols .  [TK_RW_PRINT, TK_RW_IF, TK_VARIABLE]
    9 eols: eols . TK_EOL

    TK_EOL  shift, and go to state 14

    $default  reduce using rule 7 (opt_eols)


State 5

    0 $accept: input $end .

    $default  accept


State 6

   23 print: TK_RW_PRINT . expr
   24      | TK_RW_PRINT . expr TK_COMMA print_option
   29 expr: . expr OP_ADD term
   30     | . expr OP_SUB term
   31     | . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    expr    go to state 18
    term    go to state 19
    factor  go to state 20


State 7

   11 if_stmt: TK_RW_IF . TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt

    TK_L_PAR  shift, and go to state 21


State 8

   28 assign: TK_VARIABLE . TK_EQUAL expr

    TK_EQUAL  shift, and go to state 22


State 9

    1 input: opt_eols statement_list . opt_eols
    2 statement_list: statement_list . eols stmt
    7 opt_eols: . eols
    8         | . %empty  [$end]
    9 eols: . eols TK_EOL
   10     | . TK_EOL

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 8 (opt_eols)

    opt_eols  go to state 23
    eols      go to state 24


State 10

    3 statement_list: stmt .

    $default  reduce using rule 3 (statement_list)


State 11

    6 stmt: if_stmt .

    $default  reduce using rule 6 (stmt)


State 12

    4 stmt: print .

    $default  reduce using rule 4 (stmt)


State 13

    5 stmt: assign .

    $default  reduce using rule 5 (stmt)


State 14

    9 eols: eols TK_EOL .

    $default  reduce using rule 9 (eols)


State 15

   29 expr: . expr OP_ADD term
   30     | . expr OP_SUB term
   31     | . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR
   37       | TK_L_PAR . expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    expr    go to state 25
    term    go to state 19
    factor  go to state 20


State 16

   35 factor: TK_NUMBER .

    $default  reduce using rule 35 (factor)


State 17

   36 factor: TK_VARIABLE .

    $default  reduce using rule 36 (factor)


State 18

   23 print: TK_RW_PRINT expr .  [$end, TK_EOL, TK_R_BRACE]
   24      | TK_RW_PRINT expr . TK_COMMA print_option
   29 expr: expr . OP_ADD term
   30     | expr . OP_SUB term

    OP_ADD    shift, and go to state 26
    OP_SUB    shift, and go to state 27
    TK_COMMA  shift, and go to state 28

    $default  reduce using rule 23 (print)


State 19

   31 expr: term .  [$end, OP_ADD, OP_SUB, TK_R_PAR, TK_EOL, TK_COMMA, TK_R_BRACE, TK_COMP_GREATER, TK_COMP_GREATER_EQUAL, TK_COMP_LESS, TK_COMP_NEQUAL, TK_COMP_LESS_EQUAL, TK_COMP_EQUAL]
   32 term: term . OP_MULT factor
   33     | term . OP_DIV factor

    OP_MULT  shift, and go to state 29
    OP_DIV   shift, and go to state 30

    $default  reduce using rule 31 (expr)


State 20

   34 term: factor .

    $default  reduce using rule 34 (term)


State 21

   11 if_stmt: TK_RW_IF TK_L_PAR . conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   12 conditional_expr: . expr compare_options expr
   29 expr: . expr OP_ADD term
   30     | . expr OP_SUB term
   31     | . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    conditional_expr  go to state 31
    expr              go to state 32
    term              go to state 19
    factor            go to state 20


State 22

   28 assign: TK_VARIABLE TK_EQUAL . expr
   29 expr: . expr OP_ADD term
   30     | . expr OP_SUB term
   31     | . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    expr    go to state 33
    term    go to state 19
    factor  go to state 20


State 23

    1 input: opt_eols statement_list opt_eols .

    $default  reduce using rule 1 (input)


State 24

    2 statement_list: statement_list eols . stmt
    4 stmt: . print
    5     | . assign
    6     | . if_stmt
    7 opt_eols: eols .  [$end, TK_R_BRACE]
    9 eols: eols . TK_EOL
   11 if_stmt: . TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   23 print: . TK_RW_PRINT expr
   24      | . TK_RW_PRINT expr TK_COMMA print_option
   28 assign: . TK_VARIABLE TK_EQUAL expr

    TK_EOL       shift, and go to state 14
    TK_RW_PRINT  shift, and go to state 6
    TK_RW_IF     shift, and go to state 7
    TK_VARIABLE  shift, and go to state 8

    $default  reduce using rule 7 (opt_eols)

    stmt     go to state 34
    if_stmt  go to state 11
    print    go to state 12
    assign   go to state 13


State 25

   29 expr: expr . OP_ADD term
   30     | expr . OP_SUB term
   37 factor: TK_L_PAR expr . TK_R_PAR

    OP_ADD    shift, and go to state 26
    OP_SUB    shift, and go to state 27
    TK_R_PAR  shift, and go to state 35


State 26

   29 expr: expr OP_ADD . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    term    go to state 36
    factor  go to state 20


State 27

   30 expr: expr OP_SUB . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    term    go to state 37
    factor  go to state 20


State 28

   24 print: TK_RW_PRINT expr TK_COMMA . print_option
   25 print_option: . TK_BIN
   26             | . TK_HEX
   27             | . TK_DEC

    TK_HEX  shift, and go to state 38
    TK_BIN  shift, and go to state 39
    TK_DEC  shift, and go to state 40

    print_option  go to state 41


State 29

   32 term: term OP_MULT . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    factor  go to state 42


State 30

   33 term: term OP_DIV . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    factor  go to state 43


State 31

   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr . TK_R_PAR eols block_statement eols optional_else_stmt

    TK_R_PAR  shift, and go to state 44


State 32

   12 conditional_expr: expr . compare_options expr
   17 compare_options: . TK_COMP_EQUAL
   18                | . TK_COMP_NEQUAL
   19                | . TK_COMP_GREATER
   20                | . TK_COMP_GREATER_EQUAL
   21                | . TK_COMP_LESS
   22                | . TK_COMP_LESS_EQUAL
   29 expr: expr . OP_ADD term
   30     | expr . OP_SUB term

    OP_ADD                 shift, and go to state 26
    OP_SUB                 shift, and go to state 27
    TK_COMP_GREATER        shift, and go to state 45
    TK_COMP_GREATER_EQUAL  shift, and go to state 46
    TK_COMP_LESS           shift, and go to state 47
    TK_COMP_NEQUAL         shift, and go to state 48
    TK_COMP_LESS_EQUAL     shift, and go to state 49
    TK_COMP_EQUAL          shift, and go to state 50

    compare_options  go to state 51


State 33

   28 assign: TK_VARIABLE TK_EQUAL expr .  [$end, TK_EOL, TK_R_BRACE]
   29 expr: expr . OP_ADD term
   30     | expr . OP_SUB term

    OP_ADD  shift, and go to state 26
    OP_SUB  shift, and go to state 27

    $default  reduce using rule 28 (assign)


State 34

    2 statement_list: statement_list eols stmt .

    $default  reduce using rule 2 (statement_list)


State 35

   37 factor: TK_L_PAR expr TK_R_PAR .

    $default  reduce using rule 37 (factor)


State 36

   29 expr: expr OP_ADD term .  [$end, OP_ADD, OP_SUB, TK_R_PAR, TK_EOL, TK_COMMA, TK_R_BRACE, TK_COMP_GREATER, TK_COMP_GREATER_EQUAL, TK_COMP_LESS, TK_COMP_NEQUAL, TK_COMP_LESS_EQUAL, TK_COMP_EQUAL]
   32 term: term . OP_MULT factor
   33     | term . OP_DIV factor

    OP_MULT  shift, and go to state 29
    OP_DIV   shift, and go to state 30

    $default  reduce using rule 29 (expr)


State 37

   30 expr: expr OP_SUB term .  [$end, OP_ADD, OP_SUB, TK_R_PAR, TK_EOL, TK_COMMA, TK_R_BRACE, TK_COMP_GREATER, TK_COMP_GREATER_EQUAL, TK_COMP_LESS, TK_COMP_NEQUAL, TK_COMP_LESS_EQUAL, TK_COMP_EQUAL]
   32 term: term . OP_MULT factor
   33     | term . OP_DIV factor

    OP_MULT  shift, and go to state 29
    OP_DIV   shift, and go to state 30

    $default  reduce using rule 30 (expr)


State 38

   26 print_option: TK_HEX .

    $default  reduce using rule 26 (print_option)


State 39

   25 print_option: TK_BIN .

    $default  reduce using rule 25 (print_option)


State 40

   27 print_option: TK_DEC .

    $default  reduce using rule 27 (print_option)


State 41

   24 print: TK_RW_PRINT expr TK_COMMA print_option .

    $default  reduce using rule 24 (print)


State 42

   32 term: term OP_MULT factor .

    $default  reduce using rule 32 (term)


State 43

   33 term: term OP_DIV factor .

    $default  reduce using rule 33 (term)


State 44

    9 eols: . eols TK_EOL
   10     | . TK_EOL
   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR . eols block_statement eols optional_else_stmt

    TK_EOL  shift, and go to state 1

    eols  go to state 52


State 45

   19 compare_options: TK_COMP_GREATER .

    $default  reduce using rule 19 (compare_options)


State 46

   20 compare_options: TK_COMP_GREATER_EQUAL .

    $default  reduce using rule 20 (compare_options)


State 47

   21 compare_options: TK_COMP_LESS .

    $default  reduce using rule 21 (compare_options)


State 48

   18 compare_options: TK_COMP_NEQUAL .

    $default  reduce using rule 18 (compare_options)


State 49

   22 compare_options: TK_COMP_LESS_EQUAL .

    $default  reduce using rule 22 (compare_options)


State 50

   17 compare_options: TK_COMP_EQUAL .

    $default  reduce using rule 17 (compare_options)


State 51

   12 conditional_expr: expr compare_options . expr
   29 expr: . expr OP_ADD term
   30     | . expr OP_SUB term
   31     | . term
   32 term: . term OP_MULT factor
   33     | . term OP_DIV factor
   34     | . factor
   35 factor: . TK_NUMBER
   36       | . TK_VARIABLE
   37       | . TK_L_PAR expr TK_R_PAR

    TK_L_PAR     shift, and go to state 15
    TK_NUMBER    shift, and go to state 16
    TK_VARIABLE  shift, and go to state 17

    expr    go to state 53
    term    go to state 19
    factor  go to state 20


State 52

    4 stmt: . print
    5     | . assign
    6     | . if_stmt
    9 eols: eols . TK_EOL
   11 if_stmt: . TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   11        | TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols . block_statement eols optional_else_stmt
   15 block_statement: . stmt
   16                | . TK_L_BRACE opt_eols statement_list opt_eols TK_R_BRACE
   23 print: . TK_RW_PRINT expr
   24      | . TK_RW_PRINT expr TK_COMMA print_option
   28 assign: . TK_VARIABLE TK_EQUAL expr

    TK_EOL       shift, and go to state 14
    TK_RW_PRINT  shift, and go to state 6
    TK_RW_IF     shift, and go to state 7
    TK_L_BRACE   shift, and go to state 54
    TK_VARIABLE  shift, and go to state 8

    stmt             go to state 55
    if_stmt          go to state 11
    block_statement  go to state 56
    print            go to state 12
    assign           go to state 13


State 53

   12 conditional_expr: expr compare_options expr .  [TK_R_PAR]
   29 expr: expr . OP_ADD term
   30     | expr . OP_SUB term

    OP_ADD  shift, and go to state 26
    OP_SUB  shift, and go to state 27

    $default  reduce using rule 12 (conditional_expr)


State 54

    7 opt_eols: . eols
    8         | . %empty  [TK_RW_PRINT, TK_RW_IF, TK_VARIABLE]
    9 eols: . eols TK_EOL
   10     | . TK_EOL
   16 block_statement: TK_L_BRACE . opt_eols statement_list opt_eols TK_R_BRACE

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 8 (opt_eols)

    opt_eols  go to state 57
    eols      go to state 4


State 55

   15 block_statement: stmt .

    $default  reduce using rule 15 (block_statement)


State 56

    9 eols: . eols TK_EOL
   10     | . TK_EOL
   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement . eols optional_else_stmt

    TK_EOL  shift, and go to state 1

    eols  go to state 58


State 57

    2 statement_list: . statement_list eols stmt
    3               | . stmt
    4 stmt: . print
    5     | . assign
    6     | . if_stmt
   11 if_stmt: . TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   16 block_statement: TK_L_BRACE opt_eols . statement_list opt_eols TK_R_BRACE
   23 print: . TK_RW_PRINT expr
   24      | . TK_RW_PRINT expr TK_COMMA print_option
   28 assign: . TK_VARIABLE TK_EQUAL expr

    TK_RW_PRINT  shift, and go to state 6
    TK_RW_IF     shift, and go to state 7
    TK_VARIABLE  shift, and go to state 8

    statement_list  go to state 59
    stmt            go to state 10
    if_stmt         go to state 11
    print           go to state 12
    assign          go to state 13


State 58

    9 eols: eols . TK_EOL
   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols . optional_else_stmt
   13 optional_else_stmt: . TK_RW_ELSE eols block_statement
   14                   | . %empty  [$end, TK_EOL, TK_R_BRACE]

    TK_EOL      shift, and go to state 14
    TK_RW_ELSE  shift, and go to state 60

    TK_EOL    [reduce using rule 14 (optional_else_stmt)]
    $default  reduce using rule 14 (optional_else_stmt)

    optional_else_stmt  go to state 61


State 59

    2 statement_list: statement_list . eols stmt
    7 opt_eols: . eols
    8         | . %empty  [TK_R_BRACE]
    9 eols: . eols TK_EOL
   10     | . TK_EOL
   16 block_statement: TK_L_BRACE opt_eols statement_list . opt_eols TK_R_BRACE

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 8 (opt_eols)

    opt_eols  go to state 62
    eols      go to state 24


State 60

    9 eols: . eols TK_EOL
   10     | . TK_EOL
   13 optional_else_stmt: TK_RW_ELSE . eols block_statement

    TK_EOL  shift, and go to state 1

    eols  go to state 63


State 61

   11 if_stmt: TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt .

    $default  reduce using rule 11 (if_stmt)


State 62

   16 block_statement: TK_L_BRACE opt_eols statement_list opt_eols . TK_R_BRACE

    TK_R_BRACE  shift, and go to state 64


State 63

    4 stmt: . print
    5     | . assign
    6     | . if_stmt
    9 eols: eols . TK_EOL
   11 if_stmt: . TK_RW_IF TK_L_PAR conditional_expr TK_R_PAR eols block_statement eols optional_else_stmt
   13 optional_else_stmt: TK_RW_ELSE eols . block_statement
   15 block_statement: . stmt
   16                | . TK_L_BRACE opt_eols statement_list opt_eols TK_R_BRACE
   23 print: . TK_RW_PRINT expr
   24      | . TK_RW_PRINT expr TK_COMMA print_option
   28 assign: . TK_VARIABLE TK_EQUAL expr

    TK_EOL       shift, and go to state 14
    TK_RW_PRINT  shift, and go to state 6
    TK_RW_IF     shift, and go to state 7
    TK_L_BRACE   shift, and go to state 54
    TK_VARIABLE  shift, and go to state 8

    stmt             go to state 55
    if_stmt          go to state 11
    block_statement  go to state 65
    print            go to state 12
    assign           go to state 13


State 64

   16 block_statement: TK_L_BRACE opt_eols statement_list opt_eols TK_R_BRACE .

    $default  reduce using rule 16 (block_statement)


State 65

   13 optional_else_stmt: TK_RW_ELSE eols block_statement .

    $default  reduce using rule 13 (optional_else_stmt)
